--- a/web/login.html
+++ b/web/login.html
@@ -25,14 +25,14 @@
         <section id="wrapper" class="login-register">
             <div class="login-box login-sidebar">
                 <div class="white-box">
-                    <form class="form-horizontal form-material" id="loginform" action="Client_login" method="post">
+                    <form class="form-horizontal form-material" id="loginform" action="ClientLogin" method="post">
                         <a href="javascript:void(0)" class="text-center db"><img src="plugins/images/admin-logo-dark.png" alt="Home" /><h2>Cryptex</h2></a> 
                         <div class="new-login-box">
                             <div class="white-box">
                                 <h3 class="box-title m-b-0">Sign In to Cryptex</h3>
                                 <h6><b>Your personal vault</b></h6>
                                 <small>Enter your details below</small>
-                                <form class="form-horizontal new-lg-form" id="loginform" action="Client_login" method="post">
+                                <form class="form-horizontal new-lg-form" id="loginform" action="ClientLogin" method="post">
 
                                     <div class="form-group  m-t-20">
                                         <div class="col-xs-12">
