--- a/web/register.html
+++ b/web/register.html
@@ -30,7 +30,7 @@
                 var divtest = document.createElement("div");
                 divtest.setAttribute("class", "form-group removeclass" + room);
                 var rdiv = 'removeclass' + room;
-                divtest.innerHTML = '<div class="col-sm-3 nopadding"> <div class="form-group"><input type="text" class="form-control" id="emp_fname" name="emp_fname" value="" placeholder="First Name" required></div></div><div class="col-sm-3 nopadding"> <div class="form-group"><input type="text" class="form-control" id="emp_lname" name="emp_lname" value="" placeholder="Last Name" required></div></div><div class="col-sm-3 nopadding"> <div class="form-group"><input type="text" class="form-control" id="emp_id" name="emp_id" value="" placeholder="Unique Id" required></div></div><div class="col-sm-3 nopadding"> <div class="form-group"> <div class="input-group-btn"><button class="btn btn-danger" type="button" onclick="remove_education_fields(' + room + ');"> <span class="glyphicon glyphicon-minus" aria-hidden="true"></span> </button></div></div></div><div class="clear"></div>';
+                divtest.innerHTML = '<div class="col-sm-3 nopadding"> <div class="form-group"><input type="text" class="form-control" id="emp_fname" name="emp_fname" value="" placeholder="First Name" required></div></div><div class="col-sm-3 nopadding"> <div class="form-group"><input type="text" class="form-control" id="emp_lname" name="emp_lname" value="" placeholder="Last Name" required></div></div><div class="col-sm-3 nopadding"> <div class="form-group"><input type="text" class="form-control" id="emp_id" name="emp_id" value="" placeholder="Mobile No" required></div></div><div class="col-sm-3 nopadding"> <div class="form-group"> <div class="input-group-btn"><button class="btn btn-danger" type="button" onclick="remove_education_fields(' + room + ');"> <span class="glyphicon glyphicon-minus" aria-hidden="true"></span> </button></div></div></div><div class="clear"></div>';
                 objTo.appendChild(divtest)
             }
             function remove_education_fields(rid) {
@@ -107,7 +107,7 @@
                             </div>
                             <div class="col-sm-3 nopadding">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" id="emp_id" name="emp_id" value="" placeholder="Unique Id" required>
+                                    <input type="text" class="form-control" id="emp_id" name="emp_id" value="" placeholder="Mobile No." required>
                                 </div>
                             </div>                            
                             <div class="col-sm-3 nopadding">
